--- a/docs/stat565/lab6_stat565.tex
+++ b/docs/stat565/lab6_stat565.tex
@@ -129,8 +129,12 @@
 \begin{document}
 \maketitle
 
-(a).
-\textcolor[rgb]{0.5,0.5,0.5}{Plot the data and report the plot here (A plot with data and means of treatment combinations). Do not report code here. Describe the observed relationship between two factors.}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Plot the data and report the plot here (A plot with data and means of treatment combinations). Do not report code here. Describe the observed relationship between two factors.}
+\end{enumerate}
 
 \begin{verbatim}
 ## Classes 'tbl_df', 'tbl' and 'data.frame':    90 obs. of  6 variables:
@@ -144,8 +148,13 @@
 
 \includegraphics[width=0.3\linewidth]{lab6_stat565_files/figure-latex/unnamed-chunk-3-1}
 
-(b).
-\textcolor[rgb]{0.5,0.5,0.5}{Obtain the numerical summary for each treatment combination and factor levels separately. Report them here in a tabular form}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Obtain the numerical summary for each treatment combination and factor levels separately. Report them here in a tabular form}
+\end{enumerate}
 
 \begin{longtable}[]{@{}cccccccccc@{}}
 \toprule
@@ -686,8 +695,13 @@ c.5\strut
 \bottomrule
 \end{longtable}
 
-(c).
-\textcolor[rgb]{0.5,0.5,0.5}{Fit the two-factor factorial model and report the complete ANOVA table here. Do not report code here. The complete ANOVA table should have a row for each of the following: main effects of each treatment, two-factor interaction effects, error and total}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{2}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Fit the two-factor factorial model and report the complete ANOVA table here. Do not report code here. The complete ANOVA table should have a row for each of the following: main effects of each treatment, two-factor interaction effects, error and total}
+\end{enumerate}
 
 \begin{longtable}[]{@{}cllllc@{}}
 \toprule
@@ -774,8 +788,13 @@ NA\strut
 \bottomrule
 \end{longtable}
 
-(d).
-\textcolor[rgb]{0.5,0.5,0.5}{Based on the ANOVA table write your conclusion appropriately. Perform all the necessary tests and report the conclusion along with the p-value.}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{3}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Based on the ANOVA table write your conclusion appropriately. Perform all the necessary tests and report the conclusion along with the p-value.}
+\end{enumerate}
 
 The line plot shows that not all lines are parallel. Difference in y
 between methods is not same for different varieties. There could be an
@@ -1145,16 +1164,26 @@ v5,a-v5,c\strut
 \bottomrule
 \end{longtable}
 
-(e).
-\textcolor[rgb]{0.5,0.5,0.5}{Provide the plots of residuals here. Do not report code here.}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{4}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Provide the plots of residuals here. Do not report code here.}
+\end{enumerate}
 
 \includegraphics[width=0.25\linewidth]{lab6_stat565_files/figure-latex/unnamed-chunk-6-1}
 \includegraphics[width=0.25\linewidth]{lab6_stat565_files/figure-latex/unnamed-chunk-6-2}
 \includegraphics[width=0.25\linewidth]{lab6_stat565_files/figure-latex/unnamed-chunk-6-3}
 \includegraphics[width=0.25\linewidth]{lab6_stat565_files/figure-latex/unnamed-chunk-6-4}
 
-\{(f).
-\textcolor[rgb]{0.5,0.5,0.5}{Based on the residual plots, clearly explain whether assumptions in the model are satisfied or violated.}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{5}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Based on the residual plots, clearly explain whether assumptions in the model are satisfied or violated.}
+\end{enumerate}
 
 The plot of studentized residual versus predicted (fitted) value shows
 that except few outliers, the residuals are evenly distributed about
@@ -1168,10 +1197,16 @@ obvious violation of zero mean and constant variance.
 The QQ plot shows that some data points are not on the line and
 flattening at the extremes, which is a litte violation of normality.
 
-(g).
-\textcolor[rgb]{0.5,0.5,0.5}{The researchers are interested in testing the following contrasts. Test each of the using software, and report conclusion along with p value.}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{6}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{The researchers are interested in testing the following contrasts. Test each of the using software, and report conclusion along with p value.}
+\end{enumerate}
 
-c1. Mean yield for variety 1 versus variety 3 at method b
+c1
+\textcolor[rgb]{0.5,0.5,0.5}{Mean yield for variety 1 versus variety 3 at method b}
 
 The \(H0\) for contrast is
 \(\mu_{b1.}-\mu_{b3.}=0\implies\beta_{1}-\beta_{3}+(\tau\beta)_{b1}-(\tau\beta)_{b3}=0\).
@@ -1183,7 +1218,8 @@ versus variety 3 at method b may be same at 5\% significance level. The
 contrast tests with Boferroni or tukey's adjustment have the same
 results (P-calue=1.0000, 0.9998, respectively).
 
-c2. Mean yield for method a versus average of methods b and c
+c2
+\textcolor[rgb]{0.5,0.5,0.5}{Mean yield for method a versus average of methods b and c}
 
 The \(H0\) for contrast is
 \(\mu_{a..}-\frac12(\mu_{b..}+\mu_{c..})=0\implies2\tau_a-\tau_b-\tau_c=0\).
@@ -1195,8 +1231,8 @@ versus average of methods b and c are significantly different at 5\%
 significance level. The contrast tests with Boferroni or tukey's
 adjustment have the same results (P-calue=0.0000, 0.0000, respectively).
 
-c3. Mean yield for method a versus average of methods b and c for
-variety 1
+c3
+\textcolor[rgb]{0.5,0.5,0.5}{ Mean yield for method a versus average of methods b and c for variety 1}
 
 The \(H0\) for contrast is \(\mu_{a1.}-\frac12(\mu_{b1.}+\mu_{c1.})=0\).
 The \(H1\) is they don't equal zero.
@@ -1208,8 +1244,8 @@ different at 5\% significance level. The contrast tests with Boferroni
 or tukey's adjustment give the opposite results (P-calue=0.1060, 0.1019,
 respectively).
 
-c4. Mean yield for method a versus average of methods b and c between
-variety 1 and variety 2
+c4
+\textcolor[rgb]{0.5,0.5,0.5}{Mean yield for method a versus average of methods b and c between variety 1 and variety 2}
 
 The \(H0\) for contrast is
 \([\mu_{a1.}-\frac12(\mu_{b1.}+\mu_{c1.})]-[\mu_{a2.}-\frac12(\mu_{b2.}+\mu_{c2.})]=0\).
@@ -1221,7 +1257,13 @@ versus average of methods b and c for variety 1 may be same at 5\%
 significance level. The contrast tests with Boferroni or tukey's
 adjustment give the same results (P-calue=1.0000, 0.9694, respectively).
 
-(h). \textcolor[rgb]{0.5,0.5,0.5}{Report the code here without output.}
+\begin{enumerate}
+\def\labelenumi{(\alph{enumi})}
+\setcounter{enumi}{7}
+\tightlist
+\item
+  \textcolor[rgb]{0.5,0.5,0.5}{Report the code here without output.}
+\end{enumerate}
 
 \begin{Shaded}
 \begin{Highlighting}[]
