--- a/static/stat565/lab6_stat565.Rmd
+++ b/static/stat565/lab6_stat565.Rmd
@@ -56,7 +56,7 @@ model_grass <- aov(y ~ m*v, data=table_grass)
 model_grass_inter <- aov(y~mv, data=table_grass)
 ```
 
-(a). \textcolor[rgb]{0.5,0.5,0.5}{Plot the data and report the plot here (A plot with data and means of treatment combinations). Do not report code here. Describe the observed relationship between two factors.}
+(a)  \textcolor[rgb]{0.5,0.5,0.5}{Plot the data and report the plot here (A plot with data and means of treatment combinations). Do not report code here. Describe the observed relationship between two factors.}
 
 ```{r echo=FALSE, out.width='30%'}
 str(table_grass)
@@ -64,14 +64,14 @@ ggline(data = table_grass, x = "variety", y = "y", add = c("mean", "jitter"),sha
 ```
 
 
-(b). \textcolor[rgb]{0.5,0.5,0.5}{Obtain the numerical summary for each treatment combination and factor levels separately. Report them here in a tabular form}
+(b)  \textcolor[rgb]{0.5,0.5,0.5}{Obtain the numerical summary for each treatment combination and factor levels separately. Report them here in a tabular form}
 
 ```{r echo=FALSE}
 pander(favstats(y ~ method, data=table_grass))
 pander(favstats(y ~ method|variety, data=table_grass))
 ```
 
-(c). \textcolor[rgb]{0.5,0.5,0.5}{Fit the two-factor factorial model and report the complete ANOVA table here. Do not report code here. The complete ANOVA table should have a row for each of the following: main effects of each treatment, two-factor interaction effects, error and total}
+(c)  \textcolor[rgb]{0.5,0.5,0.5}{Fit the two-factor factorial model and report the complete ANOVA table here. Do not report code here. The complete ANOVA table should have a row for each of the following: main effects of each treatment, two-factor interaction effects, error and total}
 
 ```{r eval=FALSE, include=FALSE}
 pander(summary(model_grass))
@@ -92,7 +92,7 @@ sum((table_grass$y- mean(table_grass$y))^2)
   **Total**      89   281279.2  3160.44    NA        NA    
  -------------------------------------------------------------
 
-(d). \textcolor[rgb]{0.5,0.5,0.5}{Based on the ANOVA table write your conclusion appropriately. Perform all the necessary tests and report the conclusion along with the p-value.}
+(d)  \textcolor[rgb]{0.5,0.5,0.5}{Based on the ANOVA table write your conclusion appropriately. Perform all the necessary tests and report the conclusion along with the p-value.}
 
 The line plot shows that not all lines are parallel. Difference in y between methods is not same for different varieties. There could be an interaction effect.
 
@@ -163,13 +163,13 @@ The Scheffe methods indicates the difference in y between varieties 4 applied me
  -------------------------------------------------------------
 
 
-(e). \textcolor[rgb]{0.5,0.5,0.5}{Provide the plots of residuals here. Do not report code here.}
+(e)  \textcolor[rgb]{0.5,0.5,0.5}{Provide the plots of residuals here. Do not report code here.}
 
 ```{r echo=FALSE, out.width='25%'}
 plot(model_grass, pch=16)
 ```
 
-{(f). \textcolor[rgb]{0.5,0.5,0.5}{Based on the residual plots, clearly explain whether assumptions in the model are satisfied or violated.}
+(f)  \textcolor[rgb]{0.5,0.5,0.5}{Based on the residual plots, clearly explain whether assumptions in the model are satisfied or violated.}
 
 The plot of studentized residual versus predicted (fitted) value shows that except few outliers, the residuals are evenly distributed about zero at each prededict value (zero mean) and vertical deviations of residuals from zero are about same for each predicted value (constant variance).
 
@@ -177,33 +177,33 @@ The plots of studentized residual versus factor levels didn't show obvious viola
 
 The QQ plot shows that some data points are not on the line and flattening at the extremes, which is a litte violation of normality.
 
-(g). \textcolor[rgb]{0.5,0.5,0.5}{The researchers are interested in testing the following contrasts. Test each of the using software, and report conclusion along with p value.}
+(g)  \textcolor[rgb]{0.5,0.5,0.5}{The researchers are interested in testing the following contrasts. Test each of the using software, and report conclusion along with p value.}
 
-  c1. Mean yield for variety 1 versus variety 3 at method b
+  c1   \textcolor[rgb]{0.5,0.5,0.5}{Mean yield for variety 1 versus variety 3 at method b}
 
 The $H0$ for contrast is $\mu_{b1.}-\mu_{b3.}=0\implies\beta_{1}-\beta_{3}+(\tau\beta)_{b1}-(\tau\beta)_{b3}=0$. The $H1$ is they don't equal zero.
 
 The P-value of this contrast test is 0.8865, which is large enough. We cannot reject the $H0$ and conclude that the mean yield for variety 1 versus variety 3 at method b may be same at 5% significance level. The contrast tests with Boferroni or tukey's adjustment have the same results (P-calue=1.0000, 0.9998, respectively).
 
-  c2. Mean yield for method a versus average of methods b and c
+  c2  \textcolor[rgb]{0.5,0.5,0.5}{Mean yield for method a versus average of methods b and c}
 
 The $H0$ for contrast is $\mu_{a..}-\frac12(\mu_{b..}+\mu_{c..})=0\implies2\tau_a-\tau_b-\tau_c=0$. The $H1$ is they don't equal zero.
 
 The P-value of this contrast test is 0.0000, which is small enough. We can reject the $H0$ and conclude that the mean yield for method a versus average of methods b and c are significantly different at 5% significance level. The contrast tests with Boferroni or tukey's adjustment have the same results (P-calue=0.0000, 0.0000, respectively).
 
-  c3. Mean yield for method a versus average of methods b and c for variety 1
+  c3  \textcolor[rgb]{0.5,0.5,0.5}{ Mean yield for method a versus average of methods b and c for variety 1}
   
 The $H0$ for contrast is $\mu_{a1.}-\frac12(\mu_{b1.}+\mu_{c1.})=0$. The $H1$ is they don't equal zero.
 
 The P-value of this contrast test is 0.0265, which is small enough. We can reject the $H0$ and conclude that the mean yield for method a versus average of methods b and c for variety 1 are significantly different at 5% significance level. The contrast tests with Boferroni or tukey's adjustment give the opposite results (P-calue=0.1060, 0.1019, respectively).
 
-  c4. Mean yield for method a versus average of methods b and c between variety 1 and variety 2
+  c4  \textcolor[rgb]{0.5,0.5,0.5}{Mean yield for method a versus average of methods b and c between variety 1 and variety 2}
 
 The $H0$ for contrast is $[\mu_{a1.}-\frac12(\mu_{b1.}+\mu_{c1.})]-[\mu_{a2.}-\frac12(\mu_{b2.}+\mu_{c2.})]=0$. The $H1$ is they don't equal zero.
 
 The P-value of this contrast test is 0.5819, which is large enough. We cannot reject the $H0$ and conclude that the mean yield for method a versus average of methods b and c for variety 1 may be same at 5% significance level. The contrast tests with Boferroni or tukey's adjustment give the same results (P-calue=1.0000, 0.9694, respectively).
 
-(h). \textcolor[rgb]{0.5,0.5,0.5}{Report the code here without output.}
+(h)  \textcolor[rgb]{0.5,0.5,0.5}{Report the code here without output.}
 
 ```{r, eval =F, size="tiny", tidy = T}
 table_grass <- read_excel("Grass.xlsx")
