--- a/docs/stat565/lab6_stat565.Rmd
+++ b/docs/stat565/lab6_stat565.Rmd
@@ -1,15 +1,14 @@
 ---
 title: "STAT565_Lab"
 author: "Shen Qu"
-date: '`Mar 11, 2019'
+date: 'Mar 11, 2019'
 output:
-  pdf_document: null
-  word_document: default
+  pdf_document: 
 geometry: margin=0.25in
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,cache=FALSE, size="tiny",cache=FALSE, results="markup", tidy=T)
+knitr::opts_chunk$set(echo = TRUE,cache=FALSE, size="tiny", results="markup", tidy=T)
 
 # theme: default, cerulean, journal, flatly, darkly, readable, spacelab, united, cosmo, lumen, paper, sandstone, simplex, and yeti
 
