--- a/static/stat562/fe_stat562.Rmd
+++ b/static/stat562/fe_stat562.Rmd
@@ -84,9 +84,9 @@ Posterior mean $=\alpha\beta=\frac{n+1}{\lambda+\sum x_i}$
  
  c. \textcolor[rgb]{0.5,0.5,0.5}{writing this estimator as a weighted (arithmetic, geometric, or harmonic) average of the MLE and some prior constant}
  
-$$\frac1{\hat\theta}=\frac{\lambda+\sum x_i}{n+1}=\frac{\lambda+n\bar x}{n+1}=\frac{\frac1\lambda+\frac{n}{\frac1{\bar x}}}{n+1}$$
+$$\frac1{\hat\theta}=\frac{\lambda+\sum x_i}{n+1}=\frac{\lambda+n\bar x}{n+1}=\frac{\frac1{\frac1\lambda}+\frac{n}{\frac1{\bar x}}}{n+1}$$
 
-$$\hat\theta=\frac1{\frac{\frac1\lambda+\frac{n}{\frac1{\bar x}}}{n+1}}$$
+$$\hat\theta=\frac1{\frac{\frac1\lambda+\frac{n}{\frac1{\bar x}}}{n+1}}=\frac1{\frac1{n+1}(\frac1{1/\lambda}+\frac{n}{1/\bar x})}$$
  which is the weighted hamonic mean of $\frac1{\lambda}$, which is the prior mean, and $\frac1{\bar x}$, which is the MLE of $\theta$.
  
  ----
